--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "framer-motion": "^11.13.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
