--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.13.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.468.0",
+    "mongodb": "^6.12.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
