--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-native-dotenv": "^3.4.11",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
